--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask>=2.0.0
-Flask-Limiter>=2.0.0
-Flask-Talisman>=1.0.0
-google-cloud-storage>=1.43.0
-google-cloud-secret-manager>=1.1.0
-antigravity==0.1
 Pillow
-wtforms
+Flask
+Flask-Limiter
+Flask-Talisman
+google-cloud-storage
+google-cloud-secret-manager
+Passage
+WTForms
+antigravity==0.1
